// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionHistoryListItem renders with standard expected props - default isRestored 1`] = `
<div
  className="version-history-list--item"
  onClick={[Function]}
>
  <span
    className="date"
  >
    mockCreatedAtDisplay
  </span>
  <span
    className="username"
  >
    by 
    mockUsername
  </span>
  <span
    className="version"
  >
    Version 
    1
  </span>
</div>
`;

exports[`VersionHistoryListItem renders with standard expected props plus isRestored 1`] = `
<div
  className="version-history-list--item"
  onClick={[Function]}
>
  <span
    className="date"
  >
    mockCreatedAtDisplay
  </span>
  <span
    className="username"
  >
    by 
    mockUsername
  </span>
  <span
    className="version"
  >
    Version 
    1
  </span>
  <span
    className="version restored"
  >
    Restored
  </span>
</div>
`;
